# grafana-k8s-sidecar

./: --env.local  .gitignore  README.md  build.sh  update-py.sh
infra/: Dockerfile
src/: helpers.py  logger.py  pyproject.toml  requirements.txt  resources.py  sidecar.py
src/grafanasync/: __main__.py
src/grafanasync/config/: config.py
src/grafanasync/formatters/: __init__.py  l_formatters.py
src/grafanasync/handlers/: __init__.py  git_handler.py  grafana_api_handler.py  grafana_db_handler.py  registry_handler.py
src/grafanasync/model/: __init__.py  model.py
src/grafanasync/process/: __init__.py  collector.py  lock.py  processor.py
src/grafanasync/util/: __init__.py  g_logger.py  gracefull_killer.py
src/tests/: test_grafanasync.py
src/tests/resources/dashboards/: b02a3ab6-57b9-4215-8fb9-f93cf595cbab.json
src/tests/resources/folders/: cb50d883-2c34-4207-92a9-03c7669ae58a.json
src/tests/resources/git_registry/empty/: date.json
src/tests/resources/git_registry/one_folder_one_dashboard/: folders.json
src/tests/resources/grafana_registry/one_folder_one_dashboard/: dashboards.json
src/tests/resources/registry/one_folder/: commit_sha.json
