[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "grafanasync"
version = "1.0.0"
description = "Syncronizes grafana instances via git using a gitops approach"
readme = "README.md"
requires-python = ">=3.7"

classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies"]
#dynamic = ["version"]

[tool.setuptools]
packages = ["grafanasync", "grafanasync.config", "grafanasync.handlers","grafanasync.model","grafanasync.process","grafanasync.util","grafanasync.formatters"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
gsync = "grafanasync.__main__:main"